apps/base/monitoring-grafana/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    prometheus-target: grafana
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
