apps/base/monitoring-grafana/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: Grafana
    gethomepage.dev/description: Platform for beautiful analytics and monitoring
    gethomepage.dev/icon: grafana
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=grafana"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - grafana.monitoring.intra.web_domain_name
      secretName: opensslpki-ingress-tls
  rules:
  - host: grafana.monitoring.intra.web_domain_name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
